--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
 
 						<!-- Logo -->
 							<div id="logo">
-								<h1><a href="index.html">Ballet Consciente</a></h1>
+								<h1><a href="#">Ballet Consciente</a></h1>
 							</div>
 
 						<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li class="active"><a href="index.html">Home</a></li>
+								<li class="active"><a href="#">Home</a></li>
 								<li><a href="#">Proyecto</a></li>
-								<li><a href="right-sidebar.html">Ana Manriquez Kjisa</a></li>
-								<li><a href="left-sidebar.html">Equipo</a></li>
-								<li><a href="no-sidebar.html">Noticias</a></li>
-								<li><a href="no-sidebar.html">Galería</a></li>
-								<li><a href="contact.html">Contact</a></li>
+								<li><a href="#">Ana Manriquez Kjisa</a></li>
+								<li><a href="#">Equipo</a></li>
+								<li><a href="#">Noticias</a></li>
+								<li><a href="#">Galería</a></li>
+								<li><a href="#">Contact</a></li>
 							</ul>
 						</nav>
 
